# course-builder

./: .cursorrules  .gitignore  README.md  phase1a.md  phase2a.md  plan.md
archive/: README.md  ROADMAP.md
archive/phase1/: .gitignore  HYBRID_WORKFLOW_PLAN.md  IMPLEMENTATION_STATUS.md  README.md  __main__.py  cli.py  client.py  config_high_bridge.yaml  qgis-plan.md  requirements.txt
archive/phase1/pipeline/: RESEARCH_FINDINGS.md  __init__.py  boundary_extraction.py  fix_blank_map.py  fix_boundary_crs.py  force_tiles.py  interactive_selection.py  qgis_template_fix.py  run_diagnostic.py
archive/phase1/qgis_setup/: DEBUG_QGIS.md  QGIS_SETUP.md  QGIS_SIP_ERROR.md  (+5 more)
archive/python-agent-phase1-actions/: README.md  phase1_actions.py
archive/workspace_high_bridge/: High Bridge Hills_selection.qgz  create_boundary.py  position_map.py
course-builder/: .gitignore  README.md  pom.xml
course-builder/frontend/: index.html  package-lock.json  package.json
docs/: GROUNDING-DINO.md  ROADMAP.md  TESTING.md  TEST_WALKTHROUGH.md  WSL_SETUP.md
phase1/: NEXT_STEPS.md  QUICK_START.md  README.md  __init__.py  cli.py  client.py  config.py  pyproject.toml  requirements.txt  setup_venv.sh
phase1/docs/: BOUNDARY_DRAWING_GUIDE.md  ZOOM_AND_BOUNDARY_EXPLAINED.md  ZOOM_LEVEL_GUIDE.md
phase1/pipeline/: __init__.py  create_boundary_simple.py  create_simple_rectangle.py  diagnose_boundary.py  geocoding.py  interactive_selection.py  qgis_env.py  qgis_template.py  qgis_template_cli.py
phase1/qgis_setup/: DEBUG_RESULTS.md  README.md  __init__.py  fix_qgis_python_v2.py  install_qgis.sh  setup_qgis.py  test_qgis_startup.py
phase1_1/: .gitignore  README.md  WORKFLOW_INTEGRATION.md  __init__.py  __main__.py  cli.py  config.py  pyproject.toml
phase1_1/pipeline/: __init__.py  data.py  dataset.py  inference.py  train.py
phase1a/: .gitignore  README.md  __init__.py  __main__.py  cli.py  client.py  config.py  pyproject.toml  requirements.txt
phase1a/pipeline/: __init__.py  classify.py  export.py  masks.py  svg.py
phase1a/resources/: color_defaults.gpl
phase1a/tests/: __init__.py  conftest.py  test_classify.py  test_client.py  test_config.py  test_export.py  test_features.py  test_gating.py  test_gui_integration.py  test_holes.py  test_interactive.py  test_mask_merge.py  test_point_selector.py  test_polygons.py  test_svg.py
phase2_1/: .gitignore  README.md  __init__.py  __main__.py  cli.py  config.py  pyproject.toml
phase2_1/pipeline/: inference.py  masks.py  polygons.py  train.py
phase2a/: .gitignore  README.md  __init__.py  __main__.py  cli.py  client.py  config.py  pyproject.toml  requirements.txt
phase2a/pipeline/: __init__.py  features.py  gating.py  grounded_sam.py  grounding_dino.py  holes.py  interactive.py  masks.py  point_selector.py  polygons.py  roi_detector.py  svg.py  visualize.py
phase2a/tests/: __init__.py  conftest.py  test_classify.py  test_client.py  test_config.py  test_export.py  test_features.py  test_gating.py  test_gui_integration.py  test_holes.py  test_interactive.py  test_mask_merge.py  test_point_selector.py  test_polygons.py  test_svg.py
python-agent/: README.md  pyproject.toml  requirements.txt
python-agent/agent/: __init__.py  __main__.py  cli.py  client.py  models.py  registry.py  server.py
python-agent/agent/actions/: __init__.py  phase1a.py  phase2a.py
python-agent/agent/types/: __init__.py
python-agent/tests/: __init__.py  conftest.py  test_actions.py  test_models.py  test_registry.py  test_server.py
session-docs/: 2025-01-21-qgis-setup-and-interactive-selection.md
test_after_quit/: position_map.py  template_selection.qgz
test_bing/: setup_qgis_project.py  template_selection.qgz
test_bing_final/: template_selection.qgz
test_bing_final2/: Bing Test Final_selection.qgz  position_map.py
test_bing_run/: template_selection.qgz
test_crs_fixed/: template_selection.qgz
test_extent/: Test Extent_selection.qgz
test_final/: position_map.py  template_selection.qgz
test_final2/: template_selection.qgz
test_final3/: template_selection.qgz
test_final_config/: template_selection.qgz
test_final_osm/: Test Final_selection.qgz  template_selection.qgz
test_final_research/: Final Research Fix_selection.qgz  fix_blank_map.py  position_map.py
test_fix3/: position_map.py  template_selection.qgz
test_fix_layers/: template_selection.qgz
test_fixed/: Fixed Config_selection.qgz  position_map.py
test_force_tiles/: force_tiles.py  template_selection.qgz
test_google_only/: template_selection.qgz
test_google_priority/: Test Google Priority_selection.qgz
test_interactive/: MANUAL_TILE_SETUP.md  template_selection.qgz
test_location/: template_selection.qgz
test_osm/: Test OSM Fallback_selection.qgz
test_pebble/: Pebble Beach_selection.qgz
test_pebble2/: Pebble Beach Test_selection.qgz  position_map.py
test_quick/: position_map.py  template_selection.qgz
test_research/: Test Research Fix_selection.qgz  position_map.py
test_research_fix/: template_selection.qgz
test_script_fix/: template_selection.qgz
test_tiles/: Test Tile Loading_selection.qgz
test_wms/: Test WMS Provider_selection.qgz
test_workspace/: Test Course_selection.qgz
test_workspace2/: template_selection.qgz
test_workspace_debug/: template_selection.qgz
test_workspace_interactive/: template_selection.qgz
test_workspace_run2/: template_selection.qgz
test_xyz_fix/: Test XYZ Fix_selection.qgz  position_map.py
test_zip/: position_map.py  template_selection.qgz
test_zip2/: Test Zip_selection.qgz  position_map.py
test_zoom_fix/: template_selection.qgz
test_zoom_fix2/: template_selection.qgz
workspace_high_bridge/: create_boundary.py  diagnose.py  enable_editing.py  fix_editing.py  fix_yellow.py  position_map.py  template_selection.qgz  test_qgis_tiles.py
workspace_pv/: Pine Valley_selection.qgz  create_boundary.py  create_square_boundary.py  position_map.py
workspace_test/: Pine Valley_selection.qgz  create_boundary.py
workspace_test2/: Pine Valley_selection.qgz  create_boundary.py
workspace_test3/: Pine Valley_selection.qgz
(+36 files in other folders)
