[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phase1"
version = "0.1.0"
description = "QGIS/GDAL terrain preparation for golf course creation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["golf", "qgis", "gdal", "terrain", "dem", "heightmap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "rasterio>=1.3.0",
    "geopandas>=0.14.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Note: QGIS is not available via pip. PyQGIS bindings come with QGIS Desktop installation.
# For automation, use qgis_process CLI tool (included with QGIS) or PyQGIS when running
# within QGIS's Python environment. See README.md for installation instructions.
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = ["phase1[dev]"]

[project.scripts]
phase1 = "phase1.cli:main"

[project.urls]
Homepage = "https://github.com/menkelabs/course-builder"
Repository = "https://github.com/menkelabs/course-builder"

[tool.setuptools.packages.find]
where = ["."]
include = ["phase1*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
