[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phase1"
version = "0.1.0"
description = "QGIS/GDAL terrain preparation for golf course creation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["golf", "qgis", "gdal", "terrain", "dem", "heightmap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click==8.3.1",
    "rich==14.2.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyyaml==6.0.3",
    "rasterio==1.4.4",
    "geopandas==1.1.2",
    "numpy==2.2.6",
    "shapely==2.1.2",
    "pyproj==3.7.1",
    "pyogrio==0.12.1",
    "affine==2.4.0",
    "attrs==25.4.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "click-plugins==1.1.1.2",
    "cligj==0.7.2",
    "packaging==25.0",
    "pandas==2.3.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
]

[project.optional-dependencies]
# Note: QGIS is not available via pip. PyQGIS bindings come with QGIS Desktop installation.
# For automation, use qgis_process CLI tool (included with QGIS) or PyQGIS when running
# within QGIS's Python environment. See README.md for installation instructions.
dev = [
    "pytest==9.0.2",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = ["phase1[dev]"]

[project.scripts]
phase1 = "phase1.cli:main"

[project.urls]
Homepage = "https://github.com/menkelabs/course-builder"
Repository = "https://github.com/menkelabs/course-builder"

[tool.setuptools.packages.find]
where = ["."]
include = ["phase1*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
