[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phase1_1"
version = "0.1.0"
description = "SegFormer-based semantic segmentation for golf course feature extraction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["golf", "semantic-segmentation", "segformer", "svg", "gis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "shapely>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
]
inference = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
sam2 = [
    "torch>=2.0.0",
    "segment-anything-2 @ git+https://github.com/facebookresearch/sam2.git",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = ["phase1_1[train,inference,sam2,dev]"]

[project.scripts]
phase1_1 = "phase1_1.cli:main"

[project.urls]
Homepage = "https://github.com/menkelabs/course-builder"
Repository = "https://github.com/menkelabs/course-builder"

[tool.setuptools.packages.find]
where = ["."]
include = ["phase1_1*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
