[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-agent"
version = "0.1.0"
description = "Python Agent for Course Builder - exposes Phase 1A and other pipeline tools as remote actions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Course Builder Team"}
]
keywords = ["agent", "goap", "course-builder", "embabel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "httpx>=0.26.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black",
    "ruff",
]
phase1a = [
    # Phase 1A dependencies for actual pipeline execution
    "numpy",
    "pillow",
]

[project.scripts]
python-agent = "agent.cli:main"

[project.urls]
"Homepage" = "https://github.com/jmjava/course-builder"
"Bug Tracker" = "https://github.com/jmjava/course-builder/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by black
